force-app/main/default/objects/AssignedResource/fields/Creation_du_rendez_vous__c.field-meta.xml
<CustomField>
    <fullName>Creation_du_rendez_vous__c</fullName>
    <formula>ServiceAppointment.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Création du rendez-vous</label>
    <type>DateTime</type>
</CustomField>