force-app/main/default/objects/AssignedResource/fields/Numero_de_station__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_station__c</fullName>
    <formula>ServiceResource.Numero_de_station__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>