force-app/main/default/objects/AssignedResource/fields/Station_externe__c.field-meta.xml
<CustomField>
    <fullName>Station_externe__c</fullName>
    <formula>ServiceResource.Station_externe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Station externe</label>
    <type>Checkbox</type>
</CustomField>